[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"


# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# build steps:
# python3 -m pip install --upgrade build
# python3 -m build
# python3 -m pip install --upgrade twine
# python3 -m twine upload dist/*