[metadata]
name = simba-lang
version = 0.1.2
author = Jérémie Vaney
author_email = jeremievaney@gmail.com
description = The Simba programming language
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyrsistent
    prompt_toolkit
    toolz
# package_data = 
#     simba.sb = simba.sb
include_package_data=True

[options.entry_points]
console_scripts =
        simba = src.simba:main

[options.packages.find]
where =
    src
exclude = 
    src.simba.dot_expr_grammar
#     src.sb