[metadata]
name = simba-lang
version = 0.1.10
author = Jérémie Vaney
author_email = jeremievaney@gmail.com
description = The Simba programming language
license = ECLIPSE PUBLIC LICENSE (1.0)
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    pyrsistent
    prompt_toolkit
    toolz
include_package_data=True

[options.package_data]
* = *.sb

[options.entry_points]
console_scripts =
        simba = simba.simba:main

[options.packages.find]
where =
    .
exclude = 
    simba.dot_expr_grammar
#     src.sb